--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "random-quote-machine",
+  "homepage": "https://nataliecardot.com/random-quote-machine/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,8 @@
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
